Remove outer table. Fix tab alignment.

--- a/core/webapp/stylesheet.css
+++ b/core/webapp/stylesheet.css
@@ -124,6 +124,7 @@ legend
 table#header
 {
     width: 100%;
+    background-color: #f8f8f8;
 }
 
 /* Quick options (admin, help, my account, signout) table */
@@ -1459,14 +1460,19 @@ img.labkey-grid-filter-icon
 }
 
 /* The table that is the entire page */
-table.labkey-main
+.labkey-main
 {
     width: 100%;
-    height: 100%;
     padding: 0;
+    background-color: #F8F8F8;
+}
+
+/* For the wizard template*/
+table.labkey-main
+{
+    height: 100%;
     border-spacing: 0;
     *border-collapse: collapse;
-    background-color: #F8F8F8;
 }
 
 /* The top panel with the title and logo */
@@ -3181,15 +3187,6 @@ td.labkey-tab, .labkey-tab {
     cursor: pointer;
 }
 
-/* This tab has a bottom border and its text is shaded so it looks like it is back and unselectable */
-td.labkey-tab-inactive {
-	padding: 4px 7px;
-    border:solid 1px #b4b4b4;
-    text-decoration: none;
-    color: #444444;
-	background-color: #f4f4f4;
-}
-
 td.labkey-tab-content, .labkey-tab-content {
 	padding: 4px 7px;
     border-left: solid 1px #b4b4b4;
@@ -3199,7 +3196,7 @@ td.labkey-tab-content, .labkey-tab-content {
     vertical-align:bottom;
 }
 
-.labkey-tab-selected a, .labkey-tab a, .labkey-tab-inactive a
+.labkey-tab-selected a, .labkey-tab a
 {
     outline: none;
 }
@@ -3246,21 +3243,6 @@ ul.labkey-tab-strip a
     -moz-box-shadow: 0 -2px 2px #ddd;
     -webkit-box-shadow: 0 -2px 2px #ddd;
     box-shadow: 0 -2px 2px #ddd;
-}
-
-li.labkey-tab-active a
-{
-    background-color : #fff;
-    border-bottom : 1px solid #fff;
-    margin-bottom: -1px;
-	color: #000000;
-	font-weight: bold;
-}
-
-li.labkey-tab-inactive a
-{
-    background-color: #f4f4f4;
-    font-weight: bold;
 }
 
 .labkey-tab-strip-spacer
@@ -3664,6 +3646,16 @@ input[type="checkbox"], input[type="radio"] {
     background-color: #e0e6ea;
 }
 
+.labkey-app-bar-replicate
+{
+    padding-left: 0;
+    padding-right: 0;
+    position: absolute;
+    top: 75px;
+    z-index: -1;
+    height: 26px;
+}
+
 .labkey-app-bar div.labkey-folder-title { /* this should map to the link and top border color in theme */
 	float: left;
     font-family: Arial, Helvetica, sans serif;
@@ -3677,22 +3669,17 @@ input[type="checkbox"], input[type="radio"] {
 }
 
 /* tabs */
+.labkey-app-bar ul li a {
+    font-weight: bold;
+}
 
-.labkey-app-bar div.button-bar {
+.labkey-app-bar .tab-nav {
     float: right;
-}
-
-.labkey-app-bar ul {
-	border-bottom: none;
-}
-
-.labkey-app-bar li.labkey-tab-active { /* map bottom border and background color to Primary background color */
-    background-color: #f8f8f8;
-    opacity: 1.0;
-	color: #000;
-	border-bottom: 1px solid #f8f8f8;
-    margin-bottom: 0;
-    white-space:nowrap;
+    padding: 0;
+    margin: 0;
+    border-bottom: none;
+    list-style-type: none;
+    white-space: nowrap;
 }
 
 .labkey-app-bar ul:hover.labkey-tab-strip { /* map bottom border and background color to Primary background color */
@@ -3702,22 +3689,16 @@ input[type="checkbox"], input[type="radio"] {
     border-bottom: 1px solid #f8f8f8;
 }
 
-.labkey-app-bar ul {
-    list-style-type: none;
-    margin: 0;
-}
-
 .labkey-app-bar ul li {
-    white-space: nowrap;
+    display: inline-block;
+    /*white-space: nowrap;*/
 
     padding:  8px 8px 8px 20px;
-    float: left;
     line-height : 14px;
     text-decoration : none;
     background-color: #efefef;
 
     border-radius: 5px 5px 0 0;
-    margin-right: 4px;
 
     -moz-box-shadow: 0 -2px 2px #ddd;
     -webkit-box-shadow: 0 -2px 2px #ddd;
@@ -3728,61 +3709,58 @@ input[type="checkbox"], input[type="radio"] {
     padding:  8px;
 }
 
-.labkey-app-bar ul li.labkey-app-bar-edit-tab {
-    padding: 4px 8px 3px 4px;
-    line-height: 0;
-}
-
-.labkey-app-bar ul li.labkey-app-bar-edit-tab a {
-    width: 23px;
-    display: inline-block;
-    overflow: hidden;
-}
-
-.labkey-app-bar ul li.labkey-app-bar-edit-tab img:hover {
-    margin: 0 0 0 -25px;
-}
-
-.labkey-app-bar ul li a {
-    font-weight: bold;
-}
-
-.labkey-app-bar ul li.labkey-app-bar-tab-active {
+li.tab-nav-active {
     border:  1px solid transparent;
     background-color: #f8f8f8;
 }
 
-.button-bar.tab-edit-mode-enabled ul li.labkey-app-bar-tab-hidden {
+li.tab-nav-active a {
+    color: #000000;
+}
+
+.labkey-app-bar ul li.tab-nav-edit {
+    padding: 4px 6px 8px 0;
+}
+
+.labkey-app-bar ul li .tab-nav-edit-img {
+    vertical-align: bottom;
+    display: inline-block;
+    background: url(./_images/pencil2.png) no-repeat;
+    width: 23px;
+    height: 18px;
+}
+
+.labkey-app-bar ul li:hover .tab-nav-edit-img {
+    background-position: -25px 0;
+}
+
+.tab-edit-mode-enabled ul li.tab-nav-hidden {
     display: inline-block;
     background: #efefef url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQYQAAAAFUlEQVQYlWNgoAY4ffp0A2UKhoUVAN5jEUdaMwH1AAAAAElFTkSuQmCC) repeat;
 }
 
-.button-bar.tab-edit-mode-enabled ul li.labkey-app-bar-tab-hidden a {
+.tab-edit-mode-enabled ul li.tab-nav-hidden a {
     font-weight: normal;
     font-size: 104%;
 }
 
-.button-bar.tab-edit-mode-enabled ul li.labkey-app-bar-add-tab {
+.tab-edit-mode-enabled ul li.tab-nav-add {
     display: inline-block;
     padding: 8px;
 }
 
-.button-bar.tab-edit-mode-disabled ul li.labkey-app-bar-tab-hidden,
-.button-bar.tab-edit-mode-disabled ul li.labkey-app-bar-add-tab
+.tab-edit-mode-disabled ul li.tab-nav-hidden,
+.tab-edit-mode-disabled ul li.tab-nav-add
 {
     display: none;
 }
 
-li.labkey-app-bar-tab-inactive:hover a {
-    color: #000000;
-}
-
-li.labkey-app-bar-tab-active a {
-    color: #000000;
-}
-
-li.labkey-app-bar-tab-inactive a {
+li.tab-nav-inactive a {
     color: #565656;
+}
+
+li.tab-nav-inactive:hover a {
+    color: #000000;
 }
 
 .labkey-sub-container-tab-strip {
@@ -3832,6 +3810,16 @@ li.labkey-app-bar-tab-inactive a {
     background-color: #126495;
     padding: 1px;
     position: relative;
+}
+
+.main-menu-replicate
+{
+    padding-left: 0;
+    padding-right: 0;
+    position: absolute;
+    top: 47px;
+    z-index: -1;
+    height: 26px;
 }
 
 a.labkey-main-menu-link,
@@ -4103,6 +4091,7 @@ div.headermenu {
     background-color: #126495;
     padding: 6px 13px 6px 6px;
     font-size: 95%;
+    right: 0px;
 }
 
 div.dialog-headermenu,
